Fixed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -281,7 +281,7 @@ textarea {
   }
 
   #content-wrap {
-    padding-bottom: 3.5rem;
+    padding-bottom: 7rem;
   }
 
   #logo {
@@ -289,10 +289,14 @@ textarea {
     margin: auto;
   }
 
-  h1,h2 {
+  h1, h2 {
     font-size: 16px;
     font-family: 'MaisonNeue', sans-serif;
     font-weight: normal;
+  }
+
+  #dribbble {
+    margin: 3.5rem 0;
   }
 
   a {
@@ -301,8 +305,12 @@ textarea {
   }
 
   footer {
+    background-color: #F0F0F0;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     bottom: 0;
     width: 100%;
-    height: 3.5rem;
+    height: 7rem;
   }
